# herald-of-completion

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: herald.decorators.doctree  herald.messengers.desktop.doctree  herald.messengers.discord.doctree  herald.messengers.email.doctree  herald.types.doctree  herald.utils.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create_tagged_release.yml  generate_docs.yml  lint_test.yml  pypi_publish.yml
_autosummary/: herald.decorators.html  herald.messengers.desktop.html  herald.messengers.discord.html  herald.messengers.email.html  herald.types.html  herald.utils.html
_modules/: index.html
_modules/herald/: decorators.html  types.html  utils.html
_modules/herald/messengers/: desktop.html  discord.html  email.html
_sources/: index.rst.txt
_sources/_autosummary/: herald.decorators.rst.txt  herald.messengers.desktop.rst.txt  herald.messengers.discord.rst.txt  herald.messengers.email.rst.txt  herald.types.rst.txt  herald.utils.rst.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst  module.rst
src/herald/: __init__.py  decorators.py  herald.py  types.py  utils.py
src/herald/messengers/: __init__.py  __init__.py~master  desktop.py  desktop.py~master  discord.py  email.py
src/informant/: __init__.py  informant.py  types.py
src/informant/messengers/: __init__.py  desktop.py  gmail.py  messenger.py
tests/: test.env  test_arg_types.py  test_herald.py  test_messenger.py  test_utils.py
