[metadata]
name = informant
version = attr: informant.__version__
author = Simon Ho
author_email = simonho.ubc@gmail.com
description = Example package description
long_description = file: README.rst
long_description_content_type = text/markdown
keywords = example, setuptools
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
install_requires =
    pandas == 1.4.1

[options.packages.find]
where=src

[options.extras_require]
dev = 
    black
