[metadata]
name = informant
version = attr: informant.__version__
author = Simon Ho
author_email = simonho.ubc@gmail.com
description = Keep yourself informed of task completion.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = notification, task, completion, function, long-running
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Communications :: Chat
    Topic :: Communications :: Email
    Topic :: System :: Monitoring
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
install_requires =
    plyer

[options.packages.find]
where=src

[options.extras_require]
dev = 
    black
